; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29307.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29307.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [11 x i8] c"c:\\PoC.tmv\00", align 1
@GENERIC_WRITE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@CREATE_ALWAYS = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"(-)Failed to Create File\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"(+) Writing File ...\00", align 1
@rawData = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  store i64 %8, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %9 = load i32, i32* @GENERIC_WRITE, align 4
  %10 = load i32, i32* @FILE_SHARE_READ, align 4
  %11 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @CREATE_ALWAYS, align 4
  %14 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %15 = call i64 @CreateFile(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %12, i32* null, i32 %13, i32 %14, i32 0)
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %2
  %20 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 @exit(i32 0) #3
  unreachable

22:                                               ; preds = %2
  %23 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %24 = load i64, i64* %6, align 8
  %25 = load i32, i32* @rawData, align 4
  %26 = call i32 @WriteFile(i64 %24, i32 %25, i32 41526, i32* %7, i32* null)
  br label %27

27:                                               ; preds = %22
  %28 = load i64, i64* %6, align 8
  %29 = call i32 @CloseHandle(i64 %28)
  ret i32 0
}

declare dso_local i64 @CreateFile(i8*, i32, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @WriteFile(i64, i32, i32, i32*, i32*) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
